--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.10.1'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.1"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.6.1"
     implementation 'androidx.activity:activity-compose:1.7.2'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-graphics'
@@ -58,7 +60,11 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.4.3"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation "com.squareup.okhttp3:okhttp:4.11.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation "androidx.paging:paging-compose:3.2.0-beta01"
+    implementation "io.coil-kt:coil-compose:2.4.0"
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     testImplementation 'junit:junit:4.13.2'
