--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -63,8 +65,13 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:4.11.0"
     implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
     implementation "androidx.navigation:navigation-compose:2.6.0"
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.paging:paging-compose:3.2.0-beta01"
     implementation "io.coil-kt:coil-compose:2.4.0"
+    implementation "androidx.compose.runtime:runtime-livedata:1.5.0-beta02"
+    implementation "com.google.dagger:hilt-android:2.44"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
+    kapt "com.google.dagger:hilt-compiler:2.44"
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
     implementation platform('androidx.compose:compose-bom:2022.10.00')
     testImplementation 'junit:junit:4.13.2'
@@ -75,4 +82,8 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+}
+
+kapt {
+    correctErrorTypes true
 }
