--- a/server/local.properties
+++ b/server/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jun 09 21:01:11 ICT 2023
-sdk.dir=C\:\\Users\\ngoct\\AppData\\Local\\Android\\Sdk
+#Tue Jun 13 08:31:04 ICT 2023
+sdk.dir=C\:\\Users\\OKURO DEV\\AppData\\Local\\Android\\Sdk
