--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -62,14 +62,14 @@ dependencies {
     implementation "androidx.compose.foundation:foundation:1.4.3"
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.okhttp3:okhttp:4.11.0"
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation "com.squareup.okhttp3:okhttp:5.0.0-alpha.11"
+    implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11"
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
     implementation "androidx.paging:paging-compose:3.2.0-beta01"
     implementation "io.coil-kt:coil-compose:2.4.0"
     implementation "androidx.compose.runtime:runtime-livedata:1.5.0-beta02"
-    implementation "com.google.dagger:hilt-android:2.44"
+    implementation "com.google.dagger:hilt-android:2.45"
     implementation 'androidx.hilt:hilt-navigation-compose:1.1.0-alpha01'
     kapt "com.google.dagger:hilt-compiler:2.44"
     implementation platform('org.jetbrains.kotlin:kotlin-bom:1.8.0')
