--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -66,7 +66,7 @@ dependencies {
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.11"
     implementation "androidx.navigation:navigation-compose:2.6.0"
     implementation "androidx.datastore:datastore-preferences:1.0.0"
-    implementation "androidx.paging:paging-compose:3.2.0-beta01"
+    implementation "androidx.paging:paging-compose:3.2.0-rc01"
     implementation "io.coil-kt:coil-compose:2.4.0"
     implementation "androidx.compose.runtime:runtime-livedata:1.5.0-beta02"
     implementation "com.google.dagger:hilt-android:2.45"
@@ -82,6 +82,8 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation "me.onebone:toolbar-compose:2.3.2"
 }
 
 kapt {
