--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'kotlin-kapt'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-parcelize'
 }
 
 android {
@@ -84,6 +85,8 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
 
     implementation "me.onebone:toolbar-compose:2.3.2"
+
+    implementation "io.coil-kt:coil-compose:2.4.0"
 }
 
 kapt {
