--- a/native/app/build.gradle
+++ b/native/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation "me.onebone:toolbar-compose:2.3.2"
 
     implementation "io.coil-kt:coil-compose:2.4.0"
+
+//    implementation "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha10"
 }
 
 kapt {
